Fix bug with frontend overflow

--- a/public/css/dead-simple-carousel-public.css
+++ b/public/css/dead-simple-carousel-public.css
@@ -5,6 +5,7 @@
 
 .dscw {
 	width: 100%;
+	overflow: hidden;
 }
 
 .dscw__slides {
